List page headline & list wrap padding fixed

--- a/styles/Articles.module.sass
+++ b/styles/Articles.module.sass
@@ -37,7 +37,7 @@
     display: flex
     flex-wrap: wrap
     gap: rem(27)
-    padding: 0 rem(25)
+    padding: 0
     width: 100%
 
   article
